<resources>
    <string name="app_name">HabitMoney</string>
    <string name="login_title">Welcome Back</string>
    <string name="register_title">Create Account</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_up_link">Sign Up</string>
    <string name="sign_in_link">Sign In</string>
    <string name="add_habit">Add Habit</string>
    <string name="streak_format">🔥 %d day streak</string>
    <string name="google_sign_in">Sign in with Google</string>
</resources>